Fixed tableOfContents order, added part in head title and improved readability of various elements in layout.css

--- a/source/layout.css
+++ b/source/layout.css
@@ -7,6 +7,8 @@
 	--color-background-light: #FFFFFF;
 	--color-background-dark: #010101;
 	--color-background-light-dark: #1A2A3A;
+	--color-scrollbar-background: transparent;
+	--color-scrollbar-thumb: var(--color-primary);
 
 	--color-text: var(--color-text-dark);
 	--color-background: var(--color-background-light);
@@ -34,6 +36,7 @@
 	--color-syntax-10: #282A36;
 }
 
+/* #region dark-mode */
 @media screen and (prefers-color-scheme: dark) {
 	:root {
 		--color-text: var(--color-text-light);
@@ -45,6 +48,7 @@
 		filter: brightness(90%);
 	}
 }
+/* #endregion */
 
 /* #region default tag styling */
 * {
@@ -95,6 +99,24 @@ a:hover,
 a:active,
 a:focus {
 	opacity: 0.9;
+	filter: var(--selection-effect);
+}
+/* #endregion */
+
+/* #region scrollbars */
+*::-webkit-scrollbar {
+	height: 0.8rem;
+	width: 0.8rem;
+	/* background-color: black; */
+}
+
+*::-webkit-scrollbar-track {
+	background-color: var(--color-scrollbar-background);
+}
+
+*::-webkit-scrollbar-thumb {
+	border-radius: 0.8rem;
+	background-color: var(--color-scrollbar-thumb);
 }
 /* #endregion */
 
@@ -191,7 +213,7 @@ a:focus {
 }
 
 .menu .logo {
-	border: var(--border-broad);
+	border: var(--border-broad-light);
 	border-radius: 100%;
 	overflow: hidden;
 	margin: 0.8rem auto;
@@ -392,8 +414,10 @@ a:focus {
 
 	.post-category:active,
 	.post-category:hover,
+	.post-category:focus,
 	.post-tag:active,
-	.post-tag:hover {
+	.post-tag:hover,
+	.post-tag:focus {
 		filter: var(--selection-effect);
 	}
 
@@ -435,7 +459,7 @@ footer p {
 footer p a:hover,
 footer p a:active {
     padding: 0.2rem;
-	border: var(--border-broad);
+	border: var(--border-broad-light);
 	border-radius: 0.2rem;
 }
 
@@ -498,6 +522,11 @@ footer .back-to-top {
 	text-align: left;
 }
 
+.main-content a {
+	border-radius: 0.4rem;
+	background-color: var(--color-background);
+}
+
 .main-content ul,
 .main-content ol {
 	padding-left: 2.4rem;
@@ -524,21 +553,28 @@ footer .back-to-top {
 	margin-top: 0.8rem;
 }
 
-.main-content .next,
-.main-content .previous {
-    border: var(--border-thin);
+.main-content .part-buttons > a {
+	background-color: var(--color-background);
+	margin-top: 0.8rem;
+	border: var(--border-broad);
     border-radius: 0.8rem;
     padding: 0.8rem;
     text-decoration: none;
 }
 
-	.main-content .previous {
-		float: left;
+	.main-content .part-buttons > a:hover,
+	.main-content .part-buttons > a:active,
+	.main-content .part-buttons > a:focus {
+		filter: var(--selection-effect);
 	}
 
-	.main-content .next {
-		float: right;
-	}
+.main-content .previous {
+	float: left;
+}
+
+.main-content .next {
+	float: right;
+}
 
 .main-content .post-music {
 	margin-top: 1.6rem;
@@ -606,7 +642,8 @@ footer .back-to-top {
 }
 
 	.blog-post .link:hover,
-	.blog-post .link:active {
+	.blog-post .link:active,
+	.blog-post .link:focus {
 		text-decoration: underline;
 	}
 
@@ -620,6 +657,9 @@ footer .back-to-top {
 
 .blog-post .details-bottom {
 	margin-top: 1.6rem;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 0.4rem;
 }
 /* #endregion */
 
@@ -821,10 +861,15 @@ pre[class*="language-"] {
  /* Code blocks */
 pre[class*="language-"] {
 	position: relative;
-	padding: 1em;
-	margin: .5em 0;
-	overflow: auto;
+	margin: 1.6rem 0;
 	border-radius: 0.8rem;
+	overflow-x: hidden;
+}
+
+code[class*="language-"] {
+	display: block;
+	padding: 1.6rem;
+	overflow-x: auto;
 }
 
 :not(pre) > code[class*="language-"],
@@ -913,8 +958,7 @@ pre[class*="language-"] {
 	cursor: help;
 }
 
-/*********************************************************
-* Line numbers */
+/* Line numbers */
 pre[class*="language-"].line-numbers {
 	position: relative;
 	padding-left: 3.8em;
@@ -958,12 +1002,12 @@ pre[class*="language-"].line-numbers > code {
 /* #region code copy button */
 pre button {
 	position: absolute;
-	top: 0.8rem;
-	right: 0.8rem;
+	top: 0.5rem;
+	right: 0.5rem;
 	border: var(--border-broad-light);
 	border-radius: 0.8rem;
-	padding: 0.4rem 0.8rem;
-	font-size: 1.8rem;
+	padding: 0.3rem 0.4rem;
+	background-color: var(--color-syntax-10);
 	font-weight: bold;
 	color: var(--color-text-light);
 }
